--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,7 +83,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .hero-cta {
-  background-color: var(--accent-color);
+  background: linear-gradient(135deg, #e4a84d, #b6ffb3);
   border: none;
   padding: 0.75rem 1.5rem;
   font-size: 1.1rem;
@@ -95,6 +95,12 @@ h1, h2, h3, h4, h5, h6 {
   transform: translateY(-3px);
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   background-color: #e64a19;
+}
+
+.hero-section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Faz a imagem cobrir todo o espaço disponível sem distorcer */
 }
 
 /* Map Section */
