--- a/app/views/complaints/new.html.erb
+++ b/app/views/complaints/new.html.erb
@@ -17,7 +17,7 @@
             <%= f.input :category, label: 'Categoria', 
                         collection: Complaint.categories.map { |k, v| [v, k] },
                         input_html: { class: 'form-select' } %>
-            <%= f.input :address, label: 'Endereço', input_html: { class: 'form-control', id: 'address-input' } %>
+            <%= f.input :address, as: :hidden, input_html: { class: 'form-control', id: 'address-input' } %>
             <%= f.input :latitude, as: :hidden, input_html: { id: 'complaint_latitude' } %>
             <%= f.input :longitude, as: :hidden, input_html: { id: 'complaint_longitude' } %>
             
